# vimbax_ros2_driver

./: README.md
vimbax_camera/: CMakeLists.txt  package.xml
vimbax_camera/config/: LEFT_072ZJ.xml  LEFT_072ZJ_TRIGS.xml  LEFT_072ZJ_TRIGS_BIN.xml  LEFT_ZH_PWM_TRIGED_BIN.xml  LEFT_ZJ_TRIGED_PWM_BIN.xml  RIGHT_072ZH.xml  RIGHT_072ZH_TRIGD.xml  RIGHT_072ZH_TRIGD_BIN.xml  RIGHT_ZH_TRIGED_PWM_BIN.xml  RIGHT_ZJ_PWM_TRIGED_BIN.xml  bw.xml  bw_trig.xml  color.xml  color_trig.xml
vimbax_camera/include/vimbax_camera/: vimbax_camera_node.hpp
vimbax_camera/launch/: left.launch.py  right.launch.py  stereo_bin_sync.launch.py  stereo_composition.launch.py  vimbax_camera_launch.py  vimbax_camera_launch_bw.launch.py  vimbax_camera_launch_bw.py  vimbax_camera_launch_color.launch.py  vimbax_camera_launch_color.py  vimbax_camera_launch_stereo.launch.py
vimbax_camera/params/: .gitignore  ir_params.xml  rgb_params.xml
vimbax_camera/src/: load_camera_config.py  multi_camera_synchronisation.cpp  multi_topic_subscriber.cpp  simple_node_recorder.cpp  stereo_recorder_node.cpp  stereo_sync_node.cpp  stereo_trig_node.cpp  vimbax_camera_node.cpp
vimbax_camera_msgs/: CMakeLists.txt
vimbax_camera_msgs/srv/: TriggerTime.srv
